[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
reqwest-retry = "0.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
